RecyclerView to view posts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Dm564project">
         <activity
+            android:name=".PostsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -18,10 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DisplayMessageActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
-
+        <activity
+            android:name=".DisplayMessageActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
